# vortex

./: .gitmodules  README.md  build
backend/: CMakeLists.txt  build
backend/builddir/: CMakeCache.txt  Makefile  cmake_install.cmake  vortex-server
backend/src/: api.cpp  main.cpp  mime.cpp  server.cpp  vortex.h
backend/src/api/: auth.cpp
frontend/: general.css  index.html
frontend/inject/: worker.js
frontend/src/: apicall.js  configuration.js  desktop.js  logon.js  master.js  memory.js  ping.js  wnx.js
frontend/src/multitasking/: scheduler.js  vthread.js  worker.js
